Fix too narrow conversation header (#910)

--- a/css/browser.css
+++ b/css/browser.css
@@ -105,13 +105,6 @@ html.hide-dropdowns .uiContextualLayerPositioner {
 	display: block !important;
 }
 
-/* Narrower titlebar */
-._36ic,
-._5742,
-._673w {
-	height: 40px !important;
-	padding: 4px !important;
-}
 /* Vertically center chat options */
 ._fl2 {
 	padding: 0 !important;
